--- a/Buckland_Chapter5-Pathfinder/Pathfinder.vcxproj
+++ b/Buckland_Chapter5-Pathfinder/Pathfinder.vcxproj
@@ -14,6 +14,7 @@
     <SccProjectName />
     <SccLocalPath />
     <ProjectGuid>{74B281E6-AF26-461A-9933-C63CE1350871}</ProjectGuid>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -65,8 +66,8 @@
       <PrecompiledHeaderOutputFile>.\Release\Pathfinder.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Release\</ObjectFileName>
       <ProgramDataBaseFileName>.\Release\</ProgramDataBaseFileName>
-      <AdditionalIncludeDirectories>C:\Users\christopher.harper\Desktop\GitHub\GameAI-Pathfinding-2.0\Common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
+      <AdditionalIncludeDirectories>C:\Users\clay_\Documents\GitHub\GameAI-Pathfinding-2.0\Common;C:\Users\christopher.harper\Desktop\GitHub\GameAI-Pathfinding-2.0\Common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DebugInformationFormat>OldStyle</DebugInformationFormat>
       <AdditionalUsingDirectories>C:\Users\christopher.harper\Desktop\GitHub\GameAI-Pathfinding-2.0\Common;%(AdditionalUsingDirectories)</AdditionalUsingDirectories>
     </ClCompile>
     <Midl>
@@ -108,7 +109,7 @@
       <ObjectFileName>.\Debug\</ObjectFileName>
       <ProgramDataBaseFileName>.\Debug\</ProgramDataBaseFileName>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
-      <AdditionalIncludeDirectories>C:\Users\christopher.harper\Desktop\GitHub\GameAI-Pathfinding-2.0\Common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\clay_\Documents\GitHub\GameAI-Pathfinding-2.0\Common;C:\Users\christopher.harper\Desktop\GitHub\GameAI-Pathfinding-2.0\Common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
